[gd_scene load_steps=5 format=3 uid="uid://dluh2nj5rlsvp"]

[ext_resource type="Script" uid="uid://bs6ff6hmnefw6" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="AudioStream" uid="uid://cb44nwy4giy0r" path="res://Assets/South Island ~ Lovers - Sonic The Fighters [jZ1Dspka5GI].mp3" id="1_jjgbg"]
[ext_resource type="AudioStream" uid="uid://dehvjbwag4dhl" path="res://Assets/kenney_voiceover-pack-fighter/Audio/1.ogg" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://b7br4j7qafkms" path="res://Scenes/menu_music.tscn" id="4_jjvhh"]

[node name="Main" type="Node"]
script = ExtResource("1_8gbba")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="ButtonMusic" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Music"

[node name="ButtonSFX" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_jjgbg")
bus = &"Music"

[node name="AudioStreamPlayerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bo1nx")
bus = &"SFX"

[node name="MenuMusic" parent="." instance=ExtResource("4_jjvhh")]
visible = false

[connection signal="toggled" from="Control/CenterContainer/VBoxContainer/ButtonMusic" to="." method="_on_button_music_toggled"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ButtonSFX" to="." method="_on_button_sfx_pressed"]
